feat: swagger schema for tic tac toe
